Bug 397431 - Background: Enabling blur OR setting background size to 100% removes transparency
Summary: Background: Enabling blur OR setting background size to 100% removes transpar...
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.8.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
: 397204 397363 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-08-13 19:45 UTC by Don
Modified: 2018-08-21 13:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: v0.8.1
Sentry Crash Report:


Attachments
Screenshots showing the problem (1.20 MB, application/zip)
2018-08-13 19:49 UTC, Don
Details
My layout (9.03 KB, text/plain)
2018-08-20 20:14 UTC, Don
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Don 2018-08-13 19:45:58 UTC
I have a top panel which I like to have transparent and blurred while no window is maximized. While this worked nicely until recently some update must have changed something (sorry for being so unspecific but I just don't really know).

Now when I enable blur and have the background size set to 100, the background will always be just plain black although transparency is at 70.

Now I can either disable blur or decrease the background below 100 and the panel will be transparent again. I can also do both but neither is an agreeable setting for me. And I also noted that the type will change automatically between dock and panel depending on the background size but I am not sure whether this is related.
Comment 1 Don 2018-08-13 19:49:49 UTC
Created attachment 114423 [details]
Screenshots showing the problem
Comment 2 Don 2018-08-13 19:52:55 UTC
Just saw this a duplicate of https://bugs.kde.org/show_bug.cgi?id=397363

Sorry about that!
Comment 3 Don 2018-08-13 19:56:11 UTC
(In reply to Don from comment #2)
> Just saw this a duplicate of https://bugs.kde.org/show_bug.cgi?id=397363
> 
> Sorry about that!

And I think https://bugs.kde.org/show_bug.cgi?id=397204 might be related too. Possibly the dock/panel switch might be involved after all.

Now that I think about it, the bug appeared when I first selected the Panel type. Before that I think nothing was selected (neither dock nor panel).
Comment 4 Michail Vourlakos 2018-08-20 13:41:54 UTC
I need steps to reproduce, I dont have such behavior in my system...
first step could be to add a new dock with default settings...
Comment 5 Michail Vourlakos 2018-08-20 13:43:27 UTC
*** Bug 397204 has been marked as a duplicate of this bug. ***
Comment 6 Michail Vourlakos 2018-08-20 13:45:34 UTC
*** Bug 397363 has been marked as a duplicate of this bug. ***
Comment 7 Michail Vourlakos 2018-08-20 13:48:24 UTC
or even better you can send me your layouts and steps to reproduce for them... This is probably a setting that interacts and hasnt been taken into account and it isnt from the obvious one...
Comment 8 Michail Vourlakos 2018-08-20 14:07:11 UTC
There is also a commit concerning blur: https://phabricator.kde.org/R878:2034d07c8e5dfece24b54fc6abbff2be2adfefdf

I dont know if this fixes it for you, if someone could test with master branch or v0.8.x branch could confirm if this issue is still valid
Comment 9 Don 2018-08-20 20:14:45 UTC
Created attachment 114523 [details]
My layout

Using active window control, otherwise no special widgets
Comment 10 Don 2018-08-20 20:22:43 UTC
I am using version 0.8 on Manjaro Linux.

To reproduce in my Layout just disable Solid background while also enabling blur and have background size at 100%.

Anyway, this is what I wanted to write as I was able to reproduce the bug like this 100% of the time. Just now, when I tried it again for my comment, the problem is gone.

The only thing I've changed is my Plasma theme. I went from Breeze Dark to Arc Dark (which is kvatum theme) and the problem is gone. I am not able to test further tonight but maybe it is related...
Comment 11 Michail Vourlakos 2018-08-20 21:52:25 UTC
Git commit 78b41eff914e565041598e2777a2eaaa98f74a8f by Michail Vourlakos.
Committed on 20/08/2018 at 21:51.
Pushed by mvourlakos into branch 'master'.

use current transparency to update effects

--the background contrast effect should be applied
only when the dock/panel is visually solid otherwise
it may block the transparency settings
FIXED-IN: v0.8.1

M  +4    -1    app/dock/dockview.cpp
M  +6    -0    containment/package/contents/ui/PanelBox.qml
M  +1    -1    containment/package/contents/ui/VisibilityManager.qml
M  +3    -1    containment/package/contents/ui/main.qml

https://commits.kde.org/latte-dock/78b41eff914e565041598e2777a2eaaa98f74a8f
Comment 12 Michail Vourlakos 2018-08-20 21:54:27 UTC
Git commit 2bf6d36acbc4d50b679ebb11712eb653abf39edf by Michail Vourlakos.
Committed on 20/08/2018 at 21:53.
Pushed by mvourlakos into branch 'v0.8'.

use current transparency to update effects

--the background contrast effect should be applied
only when the dock/panel is visually solid otherwise
it may block the transparency settings
FIXED-IN: v0.8.1
(cherry picked from commit 78b41eff914e565041598e2777a2eaaa98f74a8f)

M  +4    -1    app/dock/dockview.cpp
M  +6    -0    containment/package/contents/ui/PanelBox.qml
M  +1    -1    containment/package/contents/ui/VisibilityManager.qml
M  +3    -1    containment/package/contents/ui/main.qml

https://commits.kde.org/latte-dock/2bf6d36acbc4d50b679ebb11712eb653abf39edf
Comment 13 Michail Vourlakos 2018-08-20 21:58:13 UTC
ok... fixed, background contrast kwin effect was activated at cases that it shouldnt because it breaks opacity settings otherwise.
Comment 14 Don 2018-08-21 13:37:43 UTC
Thank you so much Michail! Great work you are doing with Latte, I could not be happier with it!